Add post channel method document
